@@ -1,3 +1,5 @@
+* Use 'type' rather than 'content_type', for compatibility with p5:CGI 
+(Mark Stosberg)
 == Changes for 0.2 Fri Aug 25 20:55:43 EDT 2006
 * Allow Initializing the object with your hash of params (Mark Stosberg)
 * Added new test for PATH_INFO (Mark Stosberg)
